--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
 <meta name="theme-color" content="#2ecc71">
-<title> About | Mug</title>
+<title> About | Mug | Test</title>
 <meta name="description" content="A free Jekyll theme for download">
 <meta name="keywords" content="Jekyll, theme, mug, free, download, SEO, blog, web">
 <link rel="stylesheet" href="/mug/css/main.css">
